# OnaAI-2.0

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml  demo.yaml  train.yaml
data/: README.md  gsm8k_test_rl.jsonl  gsm8k_tiny_rl.jsonl  gsm8k_train_rl.jsonl  sample_eval.jsonl  sample_rl.jsonl  sample_sft.jsonl
examples/: solve_math.py
scripts/: build_tiny_replica.py  download_model.py  evaluate.py  train_rl.py  train_sft.py
src/onaai/: __init__.py  cli.py  config.py  engine.py  model.py  modeling.py  server.py
src/onaai/eval/: __init__.py  evaluate.py
src/onaai/training/: __init__.py  data.py  grpo_trl.py  reward.py  rl.py  sft.py  tokenizer_utils.py
tests/: test_config.py  test_end_to_end.py  test_engine.py  test_eval.py  test_grpo_trl.py  test_model_wrapper.py  test_reward.py  test_rl_eval_hook.py  test_training_data.py
